tests/NormalTests/paczka1/fuzzy1/32106848.err
Error in line 4: VRwo0pJWzgF S871 53,4
Error in line 6: S871 S871 10,7
Error in line 32: S871 A124 27,69
Error in line 19: wb608K A124 20,6
Error in line 36: wb608K A578 56,8
